HEAD
	+ Sliced restore mode fails correctly when schema file is missing,
	  added option to force restore without schema file
2.0.16
	+ Rotate duplicity-debug.log log if exists
	+ Bug fix: Port selected during installation is correctly saved
	+ Zentyal web UI is restarted if their dependencies are upgraded
	+ Bug fix: Logs don't include unrelated information now
	+ Add total in disk_usage report
	+ Bugfix: Events report by source now works again
	+ Do not include info messages in the events report
	+ Remove redis configuration keys incompatible with redis 2.0 (natty)
	+ Services event is triggered only after five failed checkings
	+ Do not add redundant includedir lines to /etc/sudoers
	+ Fixed encoding for strings read from redis server
	+ Fixed broken link to alerts list
2.0.15
	+ Do not check the existence of cloud-prof package during the
	  restore since it is possible not to be installed while disaster
	  recovery process is done
2.0.14
	+ Added compMessage in some events to distinguish among events if
	  required
	+ Make source in events non i18n
	+ After restore, set all the restored modules as changed
	+ Added module pre-checks for configuration backup
2.0.13
	+ Fixed dashboard graphs refresh
	+ Fixed module existence check when dpkg is running
	+ Fix typo in sudoers creation to make remote support work again
2.0.12
	+ Include status of packages in the downloadable bug report
	+ Bugfix: Avoid possible problems deleting redis.first file if not exist
2.0.11
	+ New methods entry_exists and st_entry_exists in config backend
2.0.10
	+ Now redis backend returns undef on get for undefined values
	+ Allow custom mason templates under /etc/ebox/stubs
	+ Better checks before restoring a configuration backup with
	  a set of modules different than the installed one
	+ Wait for 10 seconds to the child process when destroying the
	  progress indicator to avoid zombie processes
	+ Caught SIGPIPE when trying to contact Redis server and the
	  socket was already closed